[gd_scene load_steps=4 format=3 uid="uid://lys7goimaj6i"]

[ext_resource type="Script" path="res://test.gd" id="1_t3ts2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lpoc4"]
bg_color = Color(0, 0.427451, 0, 1)
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0geri"]
bg_color = Color(0, 0.662745, 0, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 5

[node name="Node2D" type="Node2D"]
script = ExtResource("1_t3ts2")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.203922, 0.964706, 0.301961, 1)

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -236.5
offset_top = -217.5
offset_right = 236.5
offset_bottom = 217.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/v_separation = 30

[node name="Denuncia" type="Button" parent="CanvasLayer/Panel/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0.572549, 0, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_lpoc4")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0geri")
text = "Envie sua denuncia"

[node name="Mapa" type="Button" parent="CanvasLayer/Panel/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0.572549, 0, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_lpoc4")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0geri")
text = "Veja o mapa"

[node name="info" type="Button" parent="CanvasLayer/Panel/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0.572549, 0, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_lpoc4")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0geri")
text = "Saiba mais sobre 
o projeto"

[node name="Quizz" type="Button" parent="CanvasLayer/Panel/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0.572549, 0, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_lpoc4")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0geri")
text = "Fa√ßa um Quizz"

[node name="Fechar" type="Button" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -184.0
offset_top = 36.0
offset_right = -47.0
offset_bottom = 99.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0.572549, 0, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_lpoc4")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0geri")
text = "Sair"

[connection signal="pressed" from="CanvasLayer/Panel/GridContainer/Denuncia" to="." method="_on_denuncia_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/GridContainer/Mapa" to="." method="_on_mapa_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/GridContainer/info" to="." method="_on_info_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/GridContainer/Quizz" to="." method="_on_quizz_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/Fechar" to="." method="_on_fechar_pressed"]
